--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "@playwright/browser-webkit": "1.58.1",
     "babel-plugin-transform-async-to-promises": "0.8.18",
     "eslint": "9.39.2",
+    "eslint-plugin-regexp": "3.0.0",
     "globals": "17.3.0",
     "open": "11.0.0",
     "playwright": "1.58.1",
